removes -webkit-overflow-scrolling from .ngdialog to dispose of ipad dialog/dropdown bug

--- a/app/sass/directives/_dialog.scss
+++ b/app/sass/directives/_dialog.scss
@@ -9,7 +9,6 @@
 
 .ngdialog {
   overflow: auto;
-  -webkit-overflow-scrolling: touch;
   z-index: 10000;
   .ngdialog-content {
     z-index: 1000;
